sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:12: error: illegal start of simple expression
	    if(inverse == false=){
                                ^AlgBubbleSort3:18: error: ')' expected but '}' found.
       }
       ^