sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
	var inverse:Boolean=true;
var T: Int=getNombreValeurs()
     for(i<-0 to T-2){ 
     	inverse=false
       for(k<-i to 0 by -1){       
	    if(getValeur(k)>getValeur(k+1)){	   	 
	      echange(k+1,k)
	      inverse=true}
	    if(inverse == false=){
	    	return
	    }
	       	         


       }
     }
}